# snort-pfac

./: CMakeLists.txt  README.md  ac.cpp  cuda_utils.h  icalcu.cu  icalcu.h  input.in  kernel.cu  pfac.cpp  pfac.cu  pfac.h  pfac_file.cpp  pfac_file.cu  pfac_file.h  pfac_kernel.cu  pfac_main.cpp  pfac_main.cu  pfac_match.cu  pfac_match.h  pfac_table.cpp  pfac_table.cu  pfac_table.h  pfac_texture.cuh  spfac.c  spfac.h  spfac_vars.h  table.txt
